--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pyarrow = "^18.1.0"
 tqdm = "^4.67.1"
 plotly = "^5.24.1"
 scikit-learn = "^1.6.0"
+xgboost = "^2.1.3"
+lightgbm = "^4.5.0"
 
 
 [build-system]
