--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Tushar Rohilla <tusharrohilla70#gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 jupyter = "^1.1.1"
 requests = "^2.32.3"
-pandas = "^2.2.3"
+pandas = "<2.2.0"
 pyarrow = "^18.1.0"
 tqdm = "^4.67.1"
 plotly = "^5.24.1"
