--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ xgboost = "^2.1.3"
 lightgbm = "^4.5.0"
 optuna = "^4.1.0"
 python-dotenv = "^1.0.1"
+confluent-kafka = "^2.7.0"
 
 
 [build-system]
