--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -3,30 +3,28 @@ name: hourly-taxi-demand-feature-pipeline
 on:
   schedule:
     - cron: "0 * * * *"
+  workflow_dispatch:  # Add this for manual triggering
 
 jobs:
   feature-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v-3
+    - uses: actions/checkout@v3
 
     - name: Setup Python 3.9
-
       uses: actions/setup-python@v4
       with:
         python-version: "3.9"
 
     - name: Install Poetry
-
       uses: snok/install-poetry@v1
 
     - name: Install dependencies
-      run : poetry install
-
+      run: poetry install
       if: steps.cache.outputs.cache-hit != 'true'
 
-    - name: execute python workflows from bash script
+    - name: Execute python workflows from bash script
       env:
         HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
       run: poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
