--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ lightgbm = "^4.5.0"
 optuna = "^4.1.0"
 python-dotenv = "^1.0.1"
 confluent-kafka = "^2.7.0"
+geopandas = "^1.0.1"
 
 
 [build-system]
