--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.9,<3.13"
 jupyter = "^1.1.1"
 requests = "^2.32.3"
-pandas = "<2.2.0"
+pandas = "^1.5.3"  # Compatible version for numpy < 2.0.0
 pyarrow = "^18.1.0"
 tqdm = "^4.67.1"
 plotly = "^5.24.1"
@@ -21,6 +21,8 @@ optuna = "^4.1.0"
 python-dotenv = "^1.0.1"
 confluent-kafka = "^2.7.0"
 geopandas = "^1.0.1"
+numpy = "^1.23.5"  # Specified version to avoid incompatibility with pandas
+
 
 
 [build-system]
