--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -1,6 +1,8 @@
 name: hourly-taxi-demand-feature-pipeline
 
 on:
+  schedule:
+    - cron: "0 * * * *"
   workflow_dispatch:  # Add this for manual triggering
 
 jobs:
