--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -1,6 +1,9 @@
-name: hourly-taxi-demand-feature-pipeline
+name: feature_pipeline
 
 on:
+ schedule:
+  - cron: '0 * * * *'
+
   workflow_dispatch:  # Add this for manual triggering
 
 jobs:
@@ -22,7 +25,9 @@ jobs:
       run: poetry install
       if: steps.cache.outputs.cache-hit != 'true'
       
-    - name: Execute python workflows from bash script
-      env:
+    - name: Run feature generation script
+      env: 
+        HOPSWORKS_PROJECT_NAME: ${{ secrets.HOPSWORKS_PROJECT_NAME }}
         HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-      run: poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
+      run: make features
+
