--- a/.github/workflows/training_pipeline.yaml
+++ b/.github/workflows/training_pipeline.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:  # Add this for manual triggering
 
 jobs:
-  feature-pipeline:
+  training-pipeline:
     runs-on: ubuntu-latest
 
     steps:
